# bird

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt
src/application/: CMakeLists.txt
src/application/server/: CMakeLists.txt  Server.cpp
src/base/: CMakeLists.txt
src/base/common/: CsvReader.cpp  CsvReader.h  Itoa.h  Types.h  Version.h
src/base/disruptor/: BatchEventProcessor.h  BlockingWaitStrategy.h  CMakeLists.txt  MultiProducerSequencer.h  ProcessingSequenceBarrier.h  RingBuffer.h  SequenceBarrier.h  Sequencer.h  WaitStrategy.h  main.cpp
src/base/logger/: AsyncLogging.cpp  Logging.cpp  Logging.h  SyncLogging.h  Timestamp.cpp
src/client/: App.xaml  App.xaml.cs  Bootstrapper.cs  client.csproj  client.sln  packages.config
src/client/.nuget/: packages.config
src/client/Messages/: Cash.cs  CashLimit.cs  Credit.cs  Currency.cs  Destriker.cs  Dimer.cs  Elastic.cs  Exchange.cs  ExchangeParameter.cs  Heartbeat.cs  Hitter.cs  Instrument.cs  InterestRate.cs  Login.cs  Order.cs  Position.cs  Price.cs  Pricer.cs  PricingSpec.cs  Quoter.cs  Reply.cs  Request.cs  SSRate.cs  Server.cs  Strategy.cs  Trade.cs  Volatility.cs
src/client/ModelLibrary/: ModelLibrary.cpp  ModelLibrary.h  ModelLibrary.vcxproj  ModelLibrary.vcxproj.filters  ReadMe.txt
src/client/Models/: CreditManager.cs  DatabaseService.cs  DestrikerManager.cs  ExchangeParameterManager.cs  GreeksEvent.cs  ISocket.cs  ImpliedVolatilityEvent.cs  Instrument.cs  InterestRateManager.cs  LoggingEventSource.cs  Option.cs  OrderManager.cs  PositionManager.cs  PricerManager.cs  PricingSpecManager.cs  ProductManager.cs  ProtoMessageCoder.cs  ProtoMessageTypes.cs  ProxyService.cs  QuoterManager.cs  SSRateManager.cs  ServerConnector.cs  ServerService.cs  StrategySwitchManager.cs  TheoCalculator.cs  TradeManager.cs  VolatilityCurveManager.cs
src/client/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
src/client/ViewModels/: CloseWindowEvent.cs  DimerUserControlViewModel.cs  ExchangeUserControlViewModel.cs  ExchangeWindowViewModel.cs  FilterItem.cs  HitterUserControlViewModel.cs  MainWindowViewModel.cs  MessageWindowViewModel.cs  MonitorUserControlViewModel.cs  MonitorWindowViewModel.cs  OptionUserControlViewModel.cs  OptionViewsWindowViewModel.cs  OptionWindowViewModel.cs  OrderWindowViewModel.cs  PortfolioWindowViewModel.cs  PricerUserControlViewModel.cs  QuoterUserControlViewModel.cs  RangeObservableCollection.cs  RateUserControlViewModel.cs  RateWindowViewModel.cs  StartWindowEvent.cs  StrategyCreditUserControlViewModel.cs  TradeWindowViewModel.cs  TradingWindowViewModel.cs  VolatilityUserControlViewModel.cs  VolatilityWindowViewModel.cs
src/client/Views/: ColumnSettingWindow.xaml  ColumnSettingWindow.xaml.cs  CreditUserControl.xaml  CreditUserControl.xaml.cs  CreditWindow.xaml  CreditWindow.xaml.cs  DimerUserControl.xaml  DimerUserControl.xaml.cs  DoubleToStringMultiConverter.cs  ExchangeUserControl.xaml  ExchangeUserControl.xaml.cs  ExchangeWindow.xaml  ExchangeWindow.xaml.cs  FilterWindow.xaml  FilterWindow.xaml.cs  HitterUserControl.xaml  HitterUserControl.xaml.cs  InputBoxUserControl.xaml  InputBoxUserControl.xaml.cs  InputBoxWindow.xaml  InputBoxWindow.xaml.cs  LoginWindow.xaml  LoginWindow.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  MessageWindow.xaml  MessageWindow.xaml.cs  MonitorUserControl.xaml  MonitorUserControl.xaml.cs  MonitorWindow.xaml  MonitorWindow.xaml.cs  NonReloadingTabControl.cs  OptionUserControl.xaml  OptionUserControl.xaml.cs  OptionWindow.xaml  OptionWindow.xaml.cs  OrderWindow.xaml  OrderWindow.xaml.cs  PercentDoubleToStringMultiConverter.cs  PermilageDoubleToStringMultiConverter.cs  (+28 more)
src/config/: EnvConfig.cpp  EnvConfig.h
src/exchange/: CMakeLists.txt
src/exchange/ctp/: CMakeLists.txt  CtpMdApi.cpp  CtpMdApi.h  CtpMdSpi.cpp  CtpTraderApi.cpp  CtpTraderApi.h  CtpTraderSpi.cpp  CtpTraderSpi.h
src/exchange/manager/: CMakeLists.txt  ExchangeManager.cpp  ExchangeManager.h  MdApi.h  TraderApi.h
src/model/: CMakeLists.txt  CashManager.cpp  Future.h  InactiveOrderManager.cpp  InactiveOrderManager.h  Instrument.h  Message.cpp  Message.h  Order.cpp  Order.h  OrderManager.cpp  OrderManager.h  PositionManager.cpp  PositionManager.h  Price.cpp  Price.h  PriceFactory.cpp  PriceFactory.h  PriceManager.cpp  PriceManager.h  ProductManager.cpp  Trade.cpp  Trade.h  TradeManager.cpp  TradeManager.h
src/server/: CMakeLists.txt
src/server/application/: CMakeLists.txt
src/server/base/: CMakeLists.txt
src/server/calculator/: CMakeLists.txt
src/server/config/: CMakeLists.txt  EnvConfig.cpp  EnvConfig.h
src/server/exchange/: CMakeLists.txt
src/server/model/: CMakeLists.txt  CashManager.cpp  CashManager.h  ClientManager.cpp  ClientManager.h  Exchange.cpp  Exchange.h  Future.cpp.tmp  Future.h  InactiveOrderManager.cpp  InactiveOrderManager.h  Instrument.cpp  Instrument.h  InstrumentManager.cpp  InstrumentManager.h  Message.cpp  Message.h  Middleware.cpp  Middleware.h  Option.cpp  Option.h  Order.cpp  Order.h  OrderManager.cpp  OrderManager.h  ParameterManager.cpp  ParameterManager.h  PositionManager.cpp  PositionManager.h  Price.cpp  Price.h  Product.cpp  Product.h  ProductManager.cpp  ProductManager.h  ProtoMessageDispatcher.h  TheoMatrix.cpp  TheoMatrix.h  Trade.cpp  Trade.h  (+2 more)
src/server/msg/: CMakeLists.txt
src/server/strategy/: CMakeLists.txt  ClusterManager.cpp  ClusterManager.h  DeviceManager.cpp  DeviceManager.h  Dimer.cpp  Dimer.h  Hedger.cpp  Hedger.h  Hitter.h  MarketMonitor.cpp  MarketMonitor.h  Pricer.cpp  Pricer.h  ProtoMessageDispatcher.h  Quoter.cpp  Quoter.h  Strategy.cpp  Strategy.h  StrategyDevice.cpp  StrategyDevice.h  StrategyTypes.h  TestStrategy.cpp  TestStrategy.h  TheoCalculator.cpp  TheoCalculator.h
src/strategy/: CMakeLists.txt  ClusterManager.cpp  ClusterManager.h  DeviceManager.cpp  DeviceManager.h  MarketMonitor.cpp  MarketMonitor.h  Strategy.h  StrategyDevice.cpp  StrategyDevice.h  StrategyTypes.h  TestStrategy.cpp  TestStrategy.h
src/test/: CMakeLists.txt  DisruptorTest.cpp  PriceTest.cpp  TestPriceManager.cpp
(+358 files in other folders)
