CMAKE_MINIMUM_REQUIRED(VERSION 2.8.5)
ENABLE_TESTING()
PROJECT(bird)
set(CMAKE_CXX_FLAGS "-std=c++14 -pthread -pg ${CMAKE_CXX_FLAGS}")
set(CMAKE_CXX_COMPILER "g++")
set(CMAKE_BUILD_TYPE "release")
#set(CMAKE_CXX_FLAGS_RELEASE "-O3 -DNDEBUG")
set(CMAKE_CXX_FLAGS_RELEASE "-O3")

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR})
LINK_DIRECTORIES(3rd_library/ctp/lib)

ADD_SUBDIRECTORY(base)
ADD_SUBDIRECTORY(model)
ADD_SUBDIRECTORY(application)
ADD_SUBDIRECTORY(strategy)
ADD_SUBDIRECTORY(test)
ADD_SUBDIRECTORY(config)
ADD_SUBDIRECTORY(exchange)
