CMAKE_MINIMUM_REQUIRED(VERSION 2.8.5)
ENABLE_TESTING()
PROJECT(bird)
set(CMAKE_CXX_FLAGS "-std=c++14 -pthread -pg ${CMAKE_CXX_FLAGS}")
set(CMAKE_CXX_COMPILER "g++")
set(CMAKE_BUILD_TYPE "debug")
#set(CMAKE_CXX_FLAGS_DEBUG "-O2")
#set(CMAKE_BUILD_TYPE "release")
#set(CMAKE_CXX_FLAGS_RELEASE "-O3 -DNDEBUG")
#set(CMAKE_CXX_FLAGS_RELEASE "-O3")

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR})
INCLUDE_DIRECTORIES(${PROJECT_BINARY_DIR}/msg)
LINK_DIRECTORIES(3rd_library/ctp/lib)

#INCLUDE_DIRECTORIES(3rd_library/protobuf/src)
#LINK_DIRECTORIES(3rd_library/protobuf/src/.libs)
INCLUDE_DIRECTORIES(../share/model)
INCLUDE_DIRECTORIES(../share/tools/protobuf/src)
LINK_DIRECTORIES(../share/tools/protobuf/src/.libs)

INCLUDE_DIRECTORIES(3rd_library/boost_1_67_0/include)
LINK_DIRECTORIES(3rd_library/boost_1_67_0/lib)

INCLUDE_DIRECTORIES(3rd_library/nanomsg/src)
LINK_DIRECTORIES(3rd_library/nanomsg/build)

ADD_SUBDIRECTORY(msg)
ADD_SUBDIRECTORY(base)
ADD_SUBDIRECTORY(calculator)
ADD_SUBDIRECTORY(model)
ADD_SUBDIRECTORY(application)
ADD_SUBDIRECTORY(strategy)
ADD_SUBDIRECTORY(test)
ADD_SUBDIRECTORY(config)
ADD_SUBDIRECTORY(exchange)
