CMAKE_MINIMUM_REQUIRED(VERSION 2.8.5)
ENABLE_TESTING()
PROJECT(bird)
set(CMAKE_CXX_FLAGS "-std=c++14 -pthread -pg -ltcmalloc -fno-builtin-malloc -fno-builtin-calloc -fno-builtin-realloc -fno-builtin-free ${CMAKE_CXX_FLAGS}")
set(CMAKE_CXX_COMPILER "g++")
set(CMAKE_BUILD_TYPE "debug")
set(CMAKE_CXX_FLAGS_DEBUG "-O0 -g")
#set(CMAKE_BUILD_TYPE "release")
set(CMAKE_CXX_FLAGS_RELEASE "-O3 -DNDEBUG")
#set(CMAKE_CXX_FLAGS_RELEASE "-O2")
#set(CMAKE_INSTALL_PREFIX ${CMAKE_BUILD_TYPE})
set(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/${CMAKE_BUILD_TYPE}/bin)
set(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/${CMAKE_BUILD_TYPE}/lib)

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR})
INCLUDE_DIRECTORIES(${PROJECT_BINARY_DIR}/msg)

set(3RD_LIBRARY_DIR ${PROJECT_SOURCE_DIR}/3rd_library)
LINK_DIRECTORIES(${3RD_LIBRARY_DIR}/ctp/lib)

INCLUDE_DIRECTORIES(${3RD_LIBRARY_DIR}/protobuf/include)
LINK_DIRECTORIES(${3RD_LIBRARY_DIR}/protobuf/lib)
INCLUDE_DIRECTORIES(../share/model)
#INCLUDE_DIRECTORIES(../share/tools/protobuf/src)
#LINK_DIRECTORIES(../share/tools/protobuf/src/.libs)

INCLUDE_DIRECTORIES(${3RD_LIBRARY_DIR}/boost/include)
LINK_DIRECTORIES(${3RD_LIBRARY_DIR}/boost/lib)

INCLUDE_DIRECTORIES(${3RD_LIBRARY_DIR}/nanomsg/include)
LINK_DIRECTORIES(${3RD_LIBRARY_DIR}/nanomsg/lib)

INCLUDE_DIRECTORIES(${3RD_LIBRARY_DIR}/tbb/include)
LINK_DIRECTORIES(${3RD_LIBRARY_DIR}/tbb/lib)

LINK_DIRECTORIES(${3RD_LIBRARY_DIR}/libunwind/lib)
LINK_DIRECTORIES(${3RD_LIBRARY_DIR}/tcmalloc/lib)

ADD_SUBDIRECTORY(msg)
ADD_SUBDIRECTORY(base)
ADD_SUBDIRECTORY(calculator)
ADD_SUBDIRECTORY(model)
ADD_SUBDIRECTORY(application)
ADD_SUBDIRECTORY(strategy)
ADD_SUBDIRECTORY(test)
ADD_SUBDIRECTORY(config)
ADD_SUBDIRECTORY(exchange)
