ADD_EXECUTABLE(databased
  sqlite3.c
  DatabaseD.cpp
  DbBase.cpp
  UserDB.cpp
  InstrumentDB.cpp
  ProductParameterDB.cpp
  PositionDB.cpp
  OrderDB.cpp
  TradeDB.cpp
  CashLimitDB.cpp
  InterestRateDB.cpp
  SSRateDB.cpp
  VolatilityCurveDB.cpp
  CreditDB.cpp
  PricerDB.cpp
  StrategySwitchDB.cpp
  QuoterDB.cpp
  HitterDB.cpp
  DimerDB.cpp
  HedgerDB.cpp
  DestrikerDB.cpp
  MarketMakingStatisticDB.cpp)
TARGET_LINK_LIBRARIES(databased dl nanomsg protomsg logger config boost_date_time)
